# Cytopia

./: .clang-format  .gitignore  .gitmodules  .lgtm.yml  .restyled.yaml  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestConfig.cmake  Cargo.toml  CpackConfiguration.cmake  Cytopia  Daadir.qani  Doxyfile  Makefile  README.md  ReleaseNotes.txt  appveyor.yml  build_doxygen.sh  cmake_install.cmake  conanfile-linux.txt.in  conanfile-mac.txt.in  conanfile-win.txt.in  conanfile.py  conanfile.txt  conanfile.txt.in  credits.txt  get_dependencies.sh  index.html  install_manifest.txt  renovate.json  sonar-project.properties  vcpkg.json
src/: CMakeLists.txt  Events.hxx  Game.cxx  Game.hxx  Game.inl.hxx  GameService.cxx  GameService.hxx  GameService.inl.hxx  Initializer.cxx  Initializer.hxx  MainMenu.cxx  MainMenu.hxx  Makefile  cmake_install.cmake  game.cxx  game.hxx  main.cxx  map.cxx  map.hxx  phc.hxx  point.cxx  point.hxx  sprite.cxx  sprite.hxx  texture.cxx  texture.hxx  vectorMatrix.cxx  vectorMatrix.hxx  window.cxx  window.hxx
src/Scripting/: ScriptEngine.cxx  ScriptEngine.hxx
src/TileDataUi/: CMakeLists.txt  TileData.cxx  TileData.hxx  TileDataContainer.cxx  TileDataContainer.hxx  TileDataUI.cxx  TileDataUI.hxx  TileDataUi.cxx  TileDataUi.hxx  TileDataUi.ui  TileSetDataUi.ui  main.cxx
src/Windows/: resource.h
src/activity/: ActivityType.hxx  LanguageSelectionActivity.cxx  LanguageSelectionActivity.hxx  MainMenuActivity.cxx  MainMenuActivity.hxx  SettingsActivity.cxx  SettingsActivity.hxx  iActivity.cxx  iActivity.hxx  iActivity.inl.hxx
src/controller/: ButtonHandler.cxx  ButtonHandler.hxx  SelectionLayoutController.cxx  SelectionLayoutController.hxx  iController.cxx  iController.hxx  iMouseHandler.cxx  iMouseHandler.hxx
src/doc/: Doc-ExpandCenter.hxx  Doc-MagicPixels.hxx  Doc-MainPage.hxx  Doc-styles.css
src/engine/: AudioMixer.cxx  AudioMixer.hxx  Engine.cxx  Engine.hxx  EventManager.cxx  EventManager.hxx  EventManager_BACKUP_15128.hxx  Layout.hxx  Map.cxx  Map.hxx  MessageQueue.hxx  MessageQueue.inl.hxx  ResourcesManager.cxx  ResourcesManager.hxx  Sprite.cxx  Sprite.hxx  TileManager.cxx  TileManager.hxx  UIMQDispatcher.hxx  UIManager.cxx  UIManager.hxx  WindowManager.cxx  WindowManager.hxx  audioMixer.cxx  audioMixer.hxx  cell.cxx  cell.hxx  engine.cxx  engine.hxx  eventManager.cxx  eventManager.hxx  eventmanagercompare.txt  map.cxx  map.hxx  resourcesManager.cxx  resourcesManager.hxx  sprite.cxx  sprite.hxx  texture.cxx  texture.hxx  (+12 more)
src/engine/GameObjects/: MapGrid.hxx  MapGrid.inl.hxx  MapNode.cxx  MapNode.hxx  cell.cxx  cell.hxx  mapNode.cxx  mapNode.hxx
src/engine/audio/: AudioConfig.cxx  AudioConfig.hxx  Music.cxx  Music.hxx  SoundEffect.cxx  SoundEffect.hxx  Soundtrack.cxx  Soundtrack.hxx  music.cxx  music.hxx  soundEffect.cxx  soundEffect.hxx
src/engine/basics/: Camera.cxx  Camera.hxx  GameStates.cxx  GameStates.hxx  LOG.hxx  Point.hxx  PointFunctions.cxx  PointFunctions.hxx  Settings.cxx  Settings.hxx  Timer.cxx  (+24 more)
src/events/: AudioEvents.hxx  EventHandler.cxx  EventHandler.hxx  MouseEvents.hxx  UIEvents.hxx
src/game/: GamePlay.cxx  GamePlay.hxx  PowerGrid.cxx  PowerGrid.hxx  PowerManager.cxx  PowerManager.hxx  ThreadSceneUpdate.cxx  ThreadSceneUpdate.hxx  ZoneArea.cxx  ZoneArea.hxx  ZoneManager.cxx  ZoneManager.hxx  Zones.cxx  Zones.hxx
src/layout/: AbsoluteLayout.cxx  AbsoluteLayout.hxx  SelectionLayout.cxx  SelectionLayout.hxx  iLayout.cxx  iLayout.hxx  iLayout.inl.hxx
src/model/: ButtonModel.cxx  ButtonModel.hxx  ButtonState.cxx  ButtonState.hxx  DataModel.hxx  Localization.cxx  Localization.hxx  MouseState.cxx  MouseState.hxx  SelectionLayoutModel.cxx  SelectionLayoutModel.hxx  SettingsModel.cxx  SettingsModel.hxx  iLocalization.hxx  iModel.cxx  iModel.hxx
src/renderer/: Canvas.cxx  Canvas.hxx  SDLRenderer.cxx  SDLRenderer.hxx  iRenderer.cxx  iRenderer.hxx
src/scenes/: MainMenuScene.cxx  MainMenuScene.hxx  MapScene.cxx  MapScene.hxx  Scenes.hxx
src/scripting/: ImGuiAngelscript.cxx  ScriptEngine.cxx
src/services/: AudioMixer.cxx  AudioMixer.hxx  DiscordRpc.cxx  DiscordRpc.hxx  GameClock.cxx  GameClock.hxx  GameClock.inl.hxx  MouseController.cxx  MouseController.hxx  Randomizer.cxx  Randomizer.hxx  ResourceManager.cxx  ResourceManager.hxx  ResourceManager.inl.hxx
src/util/: AppOptions.cxx  AppOptions.hxx  BoxSizing.cxx  BoxSizing.hxx  BoxSizing.inl.hxx  Color.cxx  Color.hxx  Exception.cxx  Exception.hxx  Filesystem.cxx  Filesystem.hxx  IEquatable.hxx  IEquatable.inl.hxx  InitOnDemand.hxx  LOG.cxx  LOG.hxx  LOG.inl.hxx  MessageQueue.hxx  Meta.hxx  OSystem.cxx  OSystem.hxx  Observer.hxx  ParseCli.cxx  ParseCli.hxx  PixelBuffer.cxx  PixelBuffer.hxx  PixelBuffer.inl.hxx  Point.cxx  Point.hxx  Point2D.cxx  Point2D.hxx  PriorityQueue.hxx  PriorityQueue.inl.hxx  RandomEngine.hxx  Range.hxx  Range.inl.hxx  Rectangle.cxx  Rectangle.hxx  Rectangle.inl.hxx  SDLAdapter.cxx  (+17 more)
src/view/: AssetHelper.cxx  AssetHelper.hxx  AssetHelper.inl.hxx  CheckBoxButton.cxx  CheckBoxButton.hxx  ClassicButton.hxx  ClassicButton.inl.hxx  CursorView.cxx  CursorView.hxx  IconButton.cxx  IconButton.hxx  ImageView.cxx  ImageView.hxx  LanguageSelectionItem.cxx  LanguageSelectionItem.hxx  SelectionItem.cxx  SelectionItem.hxx  TextButton.cxx  TextButton.hxx  TextView.cxx  TextView.hxx  Window.cxx  Window.hxx  Window.inl.hxx  iView.cxx  iView.hxx  iViewElement.cxx  iViewElement.hxx
src/windows/: icon_cytopia.rc  icon_tiledataeditor.rc
tests/: CMakeLists.txt  Common.hxx  Example.cxx  Game.cxx  GameFixture.cxx  GameFixture.hxx  game.cxx  main.cxx  phc.hxx
tests/engine/: AudioMixer.cxx  Engine.cxx  EventManager.cxx  MapFunctions.cxx  ResourcesManager.cxx  UIManager.cxx  WindowManager.cxx
tests/game/: PowerManager.cxx
tests/scripting/: ScriptEngine.cxx
tests/services/: AudioMixer.cxx  GameClock.cxx
tests/ui/: ButtonGroup.cxx
tests/util/: BoxSizing.cxx  Color.cxx  LOG.cxx  MessageQueue.cxx  Meta.cxx  Observer.cxx  PixelBuffer.cxx  Point2D.cxx  Range.cxx  Rectangle.cxx  TransitiveModel.cxx  TypeList.cxx  ZipRange.cxx
(+342 files in other folders)
